@@ -27,6 +27,9 @@
    - markus@cvs.openbsd.org 2002/02/13 00:28:13
      [sftp-server.c]
      handle SSH2_FILEXFER_ATTR_SIZE in SSH2_FXP_(F)SETSTAT; ok djm@
+   - markus@cvs.openbsd.org 2002/02/13 00:39:15
+     [readpass.c]
+     readpass.c is not longer from UCB, since we now use readpassphrase(3)
 
 20020210
  - (djm) OpenBSD CVS Sync
@@ -7574,4 +7577,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1846 2002/02/13 03:05:00 djm Exp $
+$Id: ChangeLog,v 1.1847 2002/02/13 03:05:23 djm Exp $
